[workspace] 
members = [ 
    "crates/account",
    "crates/client",
] 

resolver = "1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
ethers = "2.0.11"
ethers-signers = { version = "2.0", default-features = false }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
revm = { version = "3.5.0", features = ["default"] }
structopt = { version = "0.3", default-features = false }
serde_json = {version = "1.0.111"}
reqwest = { version = "0.11", features = ["json"] }
dunce ={ version = "1"}
hex = { package = "const-hex", version = "1.6", features = ["hex"] }