[workspace] 
members = [ 
    "crates/account",
    "crates/client",
] 

resolver = "1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
ethers = {version = "2.0.11", features = ["ws"]}
ethers-providers = { version = "2.0.11", features = ["ws"] }
ethers-signers = { version = "2.0", default-features = false }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
revm = { version = "3.5.0", features = ["default"] }
structopt = { version = "0.3", default-features = false }
serde_json = {version = "1.0.111"}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dunce ={ version = "1"}
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
strum = {version = "0.26"}
strum_macros = {version = "0.26"}
alloy ={ version = "0.1.0"}
alloy-primitives = "0.6.0"
crossbeam  ={ version = "0.8.4"}
account = {path = "./crates/account"}
serde_with = "3.6.1"
futures = {version = "0.3.30"}
